[gd_scene load_steps=9 format=3 uid="uid://gjgyl5h8mnlj"]

[ext_resource type="Texture2D" uid="uid://dxdbn8nkfwo11" path="res://Assets/customizar.png" id="1_0xcgs"]
[ext_resource type="Script" uid="uid://dg4qur3pubja5" path="res://Scripts/Menus/menu_customizar.gd" id="1_lvuwv"]
[ext_resource type="Texture2D" uid="uid://cj55mdhrm8rfj" path="res://Assets/player.png" id="2_lvuwv"]
[ext_resource type="Texture2D" uid="uid://hk6napvpsxm7" path="res://Assets/ia.png" id="3_djyug"]
[ext_resource type="Texture2D" uid="uid://kyprd8jxn0in" path="res://Assets/play.png" id="4_7ox4o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i506o"]
texture = ExtResource("1_0xcgs")

[sub_resource type="LabelSettings" id="LabelSettings_lvuwv"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_djyug"]
font_size = 50
font_color = Color(0, 0, 0, 1)

[node name="MenuCustomizar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lvuwv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_i506o")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -204.0
offset_right = 308.0
offset_bottom = 204.0
grow_horizontal = 2
grow_vertical = 2

[node name="player" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_lvuwv")

[node name="aumentar_qtd_player" type="TextureButton" parent="Panel/HBoxContainer/player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.835
anchor_right = 0.208
anchor_bottom = 0.835
offset_left = 134.352
offset_top = -37.68
offset_right = 211.352
offset_bottom = 38.32

[node name="diminuir_qtd_player" type="TextureButton" parent="Panel/HBoxContainer/player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.208
anchor_top = 0.835
anchor_right = 0.208
anchor_bottom = 0.835
offset_left = -39.648
offset_top = -37.68
offset_right = 39.352
offset_bottom = 37.32

[node name="qtd_player" type="Label" parent="Panel/HBoxContainer/player"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 0.836
anchor_right = 0.48
anchor_bottom = 0.836
offset_left = -27.88
offset_top = -34.088
offset_right = 36.12
offset_bottom = 34.912
text = "4"
label_settings = SubResource("LabelSettings_lvuwv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ia" type="TextureButton" parent="Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_djyug")

[node name="aumentar_qtd_ia" type="TextureButton" parent="Panel/HBoxContainer/ia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.781
anchor_top = 0.836
anchor_right = 0.781
anchor_bottom = 0.836
offset_left = -36.986
offset_top = -39.088
offset_right = 37.014
offset_bottom = 38.912

[node name="diminuir_qtd_ia" type="TextureButton" parent="Panel/HBoxContainer/ia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.217
anchor_top = 0.837
anchor_right = 0.217
anchor_bottom = 0.837
offset_left = -37.402
offset_top = -37.496
offset_right = 37.598
offset_bottom = 37.504

[node name="qtd_ia" type="Label" parent="Panel/HBoxContainer/ia"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.846
anchor_right = 0.51
anchor_bottom = 0.846
offset_left = -31.06
offset_top = -39.168
offset_right = 32.94
offset_bottom = 29.832
text = "0"
label_settings = SubResource("LabelSettings_djyug")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -128.0
offset_right = 242.0
offset_bottom = 90.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.4, 0.4)
icon = ExtResource("4_7ox4o")

[connection signal="pressed" from="Panel/HBoxContainer/player/aumentar_qtd_player" to="." method="_on_aumentar_qtd_player_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/player/diminuir_qtd_player" to="." method="_on_diminuir_qtd_player_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ia/aumentar_qtd_ia" to="." method="_on_aumentar_qtd_ia_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/ia/diminuir_qtd_ia" to="." method="_on_diminuir_qtd_ia_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_play_pressed"]
